# arliss_predictor

./: CMakeLists.txt  main.cpp
predictor/include/detection/: ar_predictor.hpp  predictor_base.hpp  preprocess.hpp  xyxy.hpp  yolov8.hpp
predictor/src/: CMakeLists.txt
predictor/src/detection/: ar_predictor.cpp  yolov8.cpp
